解决node_modules 中文件中的类型问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "useDefineForClassFields": true,
     "module": "esnext",
     "moduleResolution": "node",
+    "skipLibCheck": true, // 忽略所有的声明文件（ *.d.ts）的类型检查。
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom","es2015.promise"],
     "baseUrl": ".",
     "paths": {
       "@/*": [
@@ -23,5 +24,5 @@
     "src/**/*.tsx",
     "src/**/*.vue"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
