--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vitejs/plugin-vue-jsx": "^1.2.0",
     "@vue/compiler-sfc": "^3.2.20",
-    "unplugin-vue-components": "^0.16.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -38,6 +38,7 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^22.0.0",
     "typescript": "^4.4.4",
+    "unplugin-vue-components": "^0.16.0",
     "vite": "^2.6.9",
     "vue-tsc": "^0.3.0"
   }
