--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "vite-vue3-ts",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "dev": "vite --mode dev",
+    "build": "vue-tsc --noEmit && vite build --mode production",
+    "build:preview:pre": "vue-tsc --noEmit && vite build --mode pre",
     "serve": "vite preview",
     "prepare": "husky install"
   },
