--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-vue": "^1.9.3",
@@ -34,6 +35,7 @@
     "husky": "^7.0.0",
     "less": "^4.1.2",
     "lint-staged": "^11.2.3",
+    "nprogress": "^0.2.0",
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
     "stylelint-config-rational-order": "^0.1.2",
