--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "echarts": "^5.2.2",
     "element-plus": "^1.1.0-beta.24",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12",
